[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/EquipmentPlacement.gd" type="Script" id=1]
[ext_resource path="res://assets/art/tilesets/mined_equipment_placement_nine_patch.png" type="Texture" id=2]


[node name="EquipmentPlacement" type="Node2D"]
script = ExtResource( 1 )

[node name="InnerNinePatchRect" type="NinePatchRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OuterNinePatchRect" type="NinePatchRect" parent="."]
margin_left = -32.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}
